--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon api/server.js", 
+    "start": "nodemon api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cohere-ai": "^7.7.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "nodemon": "^3.1.0"
   }
